# monglepick-recommend

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pr_test  pyproject.toml  requirements.txt  test_main.http
.claude/agents/: fastapi-developer.md
.claude/skills/add-endpoint/: SKILL.md
.claude/skills/run-recommend/: SKILL.md
.claude/skills/test-recommend/: SKILL.md
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py  onboarding.py  router.py  search.py
app/core/: __init__.py  database.py  redis.py  security.py
app/model/: __init__.py  entity.py  schema.py
app/repository/: __init__.py  movie_repository.py  search_history_repository.py  trending_repository.py  user_preference_repository.py
app/service/: __init__.py  autocomplete_service.py  onboarding_service.py  search_service.py  trending_service.py  worldcup_service.py
tests/: conftest.py  test_onboarding.py  test_search.py
