[project]
name = "monglepick-recommend"
version = "0.1.0"
description = "FastAPI-based recommendation and search service for Monglepick"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "cryptography>=45.0.0",
    "fastapi>=0.115.0",
    "greenlet>=3.1.1",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]
