[project]
name = "monglepick-recommend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2.0",
    "redis>=5.0",
    "pydantic-settings>=2.0",
    "PyJWT>=2.8",
]
